Spacings Fix

--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -70,6 +70,7 @@ p {
 	left: 25%;
 	margin-bottom: 0.2em;
 	margin-right: 0;
+	margin-top: 2em;
 	width: 60%;
 }
 
@@ -154,7 +155,7 @@ h2 {
 	color: #007eed;
 	margin-top: 2em;
 	position: relative;
-	top: 1.2em;
+	top: 3.1em;
 	text-align: right;
 	width: 20%;
 }
@@ -199,7 +200,6 @@ em {
 
 strong {
 	font-weight: bold;
-	margin-top: 1em;
 }
 
 #ghbutton {
